syntax = "proto3";

package calculator;
option go_package = "./calculator/calculatorpb";

message Sum {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumRequest {
    Sum sum = 1;
}

message SumResponse {
    int32 result = 1;
}

message FindMaximumRequest {
    int32 number = 1;
}

message FindMaximumResponse {
    int32 maximum = 1;
}

service CalculatorService {
    rpc Sum(SumRequest) returns (SumResponse) {};

    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse) {};
}
